syntax = "proto3";
package hyperlane.core.interchain_security.v1;

option go_package = "github.com/bcp-innovations/hyperlane-cosmos/x/core/01_interchain_security/types";

import "cosmos/msg/v1/msg.proto";
import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "hyperlane/core/interchain_security/v1/types.proto";

// Msg defines the module Msg service.
service Msg {
  option (cosmos.msg.v1.service) = true;

  // CreateMessageIdMultisigIsm ...
  rpc CreateMessageIdMultisigIsm(MsgCreateMessageIdMultisigIsm)
      returns (MsgCreateMessageIdMultisigIsmResponse);

  // CreateMerkleRootMultisigIsm ...
  rpc CreateMerkleRootMultisigIsm(MsgCreateMerkleRootMultisigIsm)
      returns (MsgCreateMerkleRootMultisigIsmResponse);

  // CreateDomainRoutingIsm ...
  rpc CreateDomainRoutingIsm(MsgCreateDomainRoutingIsm)
      returns (MsgCreateDomainRoutingIsmResponse);

  // SetDomainRoutingIsm ...
  rpc SetDomainRoutingIsm(MsgSetDomainRoutingIsm)
      returns (MsgSetDomainRoutingIsmResponse);

  // RemoveDomainRoutingIsm ...
  rpc RemoveDomainRoutingIsm(MsgRemoveDomainRoutingIsm)
      returns (MsgRemoveDomainRoutingIsmResponse);

  // CreateNoopIsm ...
  rpc CreateNoopIsm(MsgCreateNoopIsm) returns (MsgCreateNoopIsmResponse);

  // AnnounceValidator ...
  rpc AnnounceValidator(MsgAnnounceValidator)
      returns (MsgAnnounceValidatorResponse);
}

// MsgCreateMessageIdMultisigIsm ...
message MsgCreateMessageIdMultisigIsm {
  option (cosmos.msg.v1.signer) = "creator";
  option (amino.name) = "hyperlane/v1/MsgCreateMessageIdMultisigIsm";

  // creator is the message sender.
  string creator = 1;

  // validators
  // these are 20 byte long ethereum style addresses
  repeated string validators = 2;

  // threshold ...
  uint32 threshold = 3;
}

// MsgCreateMessageIdMultisigIsmResponse ...
message MsgCreateMessageIdMultisigIsmResponse {
  string id = 1 [
    (gogoproto.customtype) =
        "github.com/bcp-innovations/hyperlane-cosmos/util.HexAddress",
    (gogoproto.nullable) = false
  ];
}

// MsgCreateMerkleRootMultisigIsm ...
message MsgCreateMerkleRootMultisigIsm {
  option (cosmos.msg.v1.signer) = "creator";
  option (amino.name) = "hyperlane/v1/MsgCreateMerkleRootMultisigIsm";

  // creator is the message sender.
  string creator = 1;

  // validators
  // these are 20 byte long ethereum style addresses
  repeated string validators = 2;

  // threshold ...
  uint32 threshold = 3;
}

// MsgCreateMerkleRootMultisigIsmResponse ...
message MsgCreateMerkleRootMultisigIsmResponse {
  string id = 1 [
    (gogoproto.customtype) =
        "github.com/bcp-innovations/hyperlane-cosmos/util.HexAddress",
    (gogoproto.nullable) = false
  ];
}

// MsgCreateDomainRoutingIsm ...
message MsgCreateDomainRoutingIsm {
  option (cosmos.msg.v1.signer) = "creator";
  option (amino.name) = "hyperlane/v1/MsgCreateDomainRoutingIsm";

  // creator is the message sender.
  string creator = 1;

  repeated DomainIsmMapping domain_ism_mapping = 2;
}

// MsgCreateDomainRoutingIsmResponse ...
message MsgCreateDomainRoutingIsmResponse {
  string id = 1 [
    (gogoproto.customtype) =
        "github.com/bcp-innovations/hyperlane-cosmos/util.HexAddress",
    (gogoproto.nullable) = false
  ];
}

// MsgSetDomainRoutingIsm ...
message MsgSetDomainRoutingIsm {
  option (cosmos.msg.v1.signer) = "owner";
  option (amino.name) = "hyperlane/v1/MsgCreateDomainRoutingIsm";

  // owner is the message sender.
  string owner = 1 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];

  // id is the Routing ISM id.
  string id = 2 [
    (gogoproto.customtype) =
        "github.com/bcp-innovations/hyperlane-cosmos/util.HexAddress",
    (gogoproto.nullable) = false
  ];

  // domain_ism_mapping ...
  repeated DomainIsmMapping domain_ism_mapping = 3;
}

// MsgSetDomainRoutingIsmResponse ...
message MsgSetDomainRoutingIsmResponse {}

// MsgRemoveDomainRoutingIsm ...
message MsgRemoveDomainRoutingIsm {
  option (cosmos.msg.v1.signer) = "owner";
  option (amino.name) = "hyperlane/v1/MsgRemoveDomainRoutingIsm";

  // owner is the message sender.
  string owner = 1 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];

  // id is the Routing ISM id.
  string id = 2 [
    (gogoproto.customtype) =
        "github.com/bcp-innovations/hyperlane-cosmos/util.HexAddress",
    (gogoproto.nullable) = false
  ];

  // domain_ism_mapping ...
  uint32 domain = 3;
}

// MsgRemoveDomainRoutingIsmResponse ...
message MsgRemoveDomainRoutingIsmResponse {}

// MsgCreateNoopIsm ...
message MsgCreateNoopIsm {
  option (cosmos.msg.v1.signer) = "creator";
  option (amino.name) = "hyperlane/v1/MsgCreateNoopIsm";

  // creator is the message sender.
  string creator = 1;
}

// MsgCreateNoopIsmResponse ...
message MsgCreateNoopIsmResponse {
  string id = 1 [
    (gogoproto.customtype) =
        "github.com/bcp-innovations/hyperlane-cosmos/util.HexAddress",
    (gogoproto.nullable) = false
  ];
}

// MsgAnnounceValidator ...
message MsgAnnounceValidator {
  option (cosmos.msg.v1.signer) = "creator";
  option (amino.name) = "hyperlane/v1/MsgAnnounceValidator";

  // validator ...
  string validator = 1;

  // storage_location ...
  string storage_location = 2;

  // signature ...
  string signature = 3;

  // mailbox_id ...
  string mailbox_id = 4 [
    (gogoproto.customtype) =
        "github.com/bcp-innovations/hyperlane-cosmos/util.HexAddress",
    (gogoproto.nullable) = false
  ];

  // creator ...
  string creator = 5;
}

// MsgAnnounceValidatorResponse ...
message MsgAnnounceValidatorResponse {}