syntax = "proto3";
package hyperlane.ism.v1;

option go_package = "github.com/KYVENetwork/hyperlane-cosmos/x/ism/types";

import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "amino/amino.proto";

// Params defines the parameters of the module.
message Params { option (amino.name) = "hyperlane/ism/Params"; }

// GenesisState is the state that must be provided at genesis.
message GenesisState {
  // params defines all the parameters of the module.
  Params params = 1
      [ (gogoproto.nullable) = false, (amino.dont_omitempty) = true ];
}

message Ism {
  option (gogoproto.goproto_getters) = false;

  string id = 1;
  uint32 ism_type = 2;
  string creator = 3 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];

  oneof ism {
    MultiSigIsm multi_sig = 4;
    NoopIsm noop = 5;
  }
}

message MultiSigIsm {
  repeated string validator_pub_keys = 1;
  uint32 threshold = 2;
}

message NoopIsm {
  // No fields needed for Noop
}